--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-	"name": "gatsby-starter-advanced2",
-	"description": "GatsbyJS starter that includes examples for advanced use cases.",
+	"name": "gatsby-tech-starter",
+	"description": "GatsbyJS | Tech Starter",
 	"version": "1.1.0",
-	"author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+	"author": "Savio Fernandes <artbycrunk@gmail.com>",
 	"dependencies": {
-		"@mdx-js/mdx": "^0.16.6",
-		"@mdx-js/tag": "^0.16.6",
+		"@mapbox/rehype-prism": "^0.3.1",
+		"@mdx-js/mdx": "^0.16.8",
+		"@mdx-js/tag": "^0.16.8",
+		"disqus-react": "^1.0.5",
 		"gatsby": "2.0.40",
-		"gatsby-mdx": "^0.3.5",
 		"gatsby-image": "2.0.19",
+		"gatsby-mdx": "^0.3.5",
 		"gatsby-plugin-catch-links": "2.0.6",
 		"gatsby-plugin-feed": "2.0.9",
 		"gatsby-plugin-google-analytics": "2.0.7",
@@ -17,26 +19,38 @@
 		"gatsby-plugin-nprogress": "2.0.6",
 		"gatsby-plugin-offline": "2.0.12",
 		"gatsby-plugin-react-helmet": "3.0.1",
+		"gatsby-plugin-robots-txt": "^1.4.0",
+		"gatsby-plugin-sass": "^2.0.10",
 		"gatsby-plugin-sharp": "^2.0.17",
 		"gatsby-plugin-sitemap": "2.0.2",
 		"gatsby-plugin-twitter": "2.0.7",
 		"gatsby-remark-autolink-headers": "2.0.10",
 		"gatsby-remark-copy-linked-files": "2.0.6",
 		"gatsby-remark-images": "2.0.6",
-		"gatsby-remark-prismjs": "3.0.3",
+		"gatsby-remark-prismjs": "3.2.2",
 		"gatsby-remark-responsive-iframe": "2.0.6",
-		"gatsby-source-filesystem": "2.0.7",
-		"gatsby-transformer-remark": "2.1.11",
-		"gatsby-transformer-sharp": "2.1.8",
+		"gatsby-source-filesystem": "2.0.17",
+		"gatsby-transformer-remark": "2.2.0",
+		"gatsby-transformer-sharp": "2.1.12",
 		"lodash": "^4.17.4",
 		"moment": "^2.22.2",
+		"node-sass": "^4.11.0",
 		"prismjs": "^1.15.0",
-		"react": "^16.6.0",
+		"prop-types": "15.6.2",
+		"react": "^16.7.0",
+		"react-collapse": "^4.0.3",
 		"react-disqus-comments": "^1.4.0",
 		"react-dom": "^16.6.0",
+		"react-gravatar": "2.6.3",
 		"react-helmet": "^5.2.0",
+		"react-images": "^0.5.19",
+		"react-motion": "^0.5.2",
 		"react-share": "^2.0.0",
+		"react-social-icons": "^4.1.0",
 		"react-twitter-widgets": "^1.7.1",
+		"styled-components": "^4.1.3",
+		"typeface-pt-sans": "0.0.54",
+		"typeface-share-tech-mono": "0.0.54",
 		"url-join": "^4.0.0"
 	},
 	"devDependencies": {
@@ -70,7 +84,7 @@
 		"build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
 		"clean": "rm -rf public && rm -rf .cache",
 		"lint:js": "eslint --ext .js,.jsx .",
-		"lint:md": "remark content/posts/",
+		"lint:md": "remark content/",
 		"write-good": "write-good $(glob 'content/posts/**/*.md')",
 		"format:js": "prettier '**/*.{js,jsx}' --write"
 	},
