--- a/package.json
+++ b/package.json
@@ -3,78 +3,95 @@
 	"description": "GatsbyJS | Tech Starter",
 	"version": "1.1.0",
 	"author": "Savio Fernandes <artbycrunk@gmail.com>",
+	"main": "index.js",
+	"peerDependencies": {
+		"gatsby": "^2.3.3",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6"
+	},
 	"dependencies": {
 		"@mapbox/rehype-prism": "^0.3.1",
-		"@mdx-js/mdx": "^0.16.8",
-		"@mdx-js/tag": "^0.16.8",
+		"@mdx-js/mdx": "0.18.2",
+		"@mdx-js/tag": "0.16.8",
+		"core-js": "^2.6.5",
+		"debug": "^4.1.1",
 		"disqus-react": "^1.0.5",
-		"gatsby": "2.0.40",
-		"gatsby-image": "2.0.19",
-		"gatsby-mdx": "^0.3.5",
-		"gatsby-plugin-catch-links": "2.0.6",
-		"gatsby-plugin-feed": "2.0.9",
-		"gatsby-plugin-google-analytics": "2.0.7",
-		"gatsby-plugin-lodash": "3.0.2",
-		"gatsby-plugin-manifest": "2.0.7",
-		"gatsby-plugin-nprogress": "2.0.6",
-		"gatsby-plugin-offline": "2.0.12",
-		"gatsby-plugin-react-helmet": "3.0.1",
+		"gatsby": "^2.3.3",
+		"gatsby-image": "2.0.35",
+		"gatsby-mdx": "^0.4.4",
+		"gatsby-plugin-catch-links": "2.0.13",
+		"gatsby-plugin-feed": "2.1.0",
+		"gatsby-plugin-google-analytics": "2.0.17",
+		"gatsby-plugin-lodash": "3.0.5",
+		"gatsby-plugin-manifest": "2.0.24",
+		"gatsby-plugin-nprogress": "2.0.10",
+		"gatsby-plugin-offline": "2.0.25",
+		"gatsby-plugin-page-creator": "^2.0.12",
+		"gatsby-plugin-react-helmet": "3.0.10",
 		"gatsby-plugin-robots-txt": "^1.4.0",
-		"gatsby-plugin-sass": "^2.0.10",
-		"gatsby-plugin-sharp": "^2.0.17",
-		"gatsby-plugin-sitemap": "2.0.2",
-		"gatsby-plugin-twitter": "2.0.7",
-		"gatsby-remark-autolink-headers": "2.0.10",
-		"gatsby-remark-copy-linked-files": "2.0.6",
-		"gatsby-remark-images": "2.0.6",
-		"gatsby-remark-prismjs": "3.2.2",
-		"gatsby-remark-responsive-iframe": "2.0.6",
-		"gatsby-source-filesystem": "2.0.17",
-		"gatsby-transformer-remark": "2.2.0",
-		"gatsby-transformer-sharp": "2.1.12",
-		"lodash": "^4.17.4",
-		"moment": "^2.22.2",
+		"gatsby-plugin-sass": "^2.0.11",
+		"gatsby-plugin-sharp": "^2.0.30",
+		"gatsby-plugin-sitemap": "2.0.10",
+		"gatsby-plugin-twitter": "2.0.13",
+		"gatsby-remark-autolink-headers": "2.0.16",
+		"gatsby-remark-copy-linked-files": "2.0.11",
+		"gatsby-remark-images": "3.0.10",
+		"gatsby-remark-prismjs": "3.2.6",
+		"gatsby-remark-responsive-iframe": "2.1.1",
+		"gatsby-source-filesystem": "2.0.27",
+		"gatsby-transformer-remark": "2.3.8",
+		"gatsby-transformer-sharp": "2.1.17",
+		"lodash": "^4.17.11",
+		"mdx-utils": "0.0.2",
+		"moment": "^2.24.0",
 		"node-sass": "^4.11.0",
+		"prism-react-renderer": "^0.1.6",
 		"prismjs": "^1.15.0",
-		"prop-types": "15.6.2",
-		"react": "^16.7.0",
+		"prop-types": "15.7.2",
+		"react": "^16.8.6",
 		"react-collapse": "^4.0.3",
 		"react-disqus-comments": "^1.4.0",
-		"react-dom": "^16.6.0",
+		"react-dom": "^16.8.6",
 		"react-gravatar": "2.6.3",
 		"react-helmet": "^5.2.0",
 		"react-images": "^0.5.19",
 		"react-motion": "^0.5.2",
-		"react-share": "^2.0.0",
+		"react-share": "^2.4.0",
 		"react-social-icons": "^4.1.0",
 		"react-twitter-widgets": "^1.7.1",
 		"styled-components": "^4.1.3",
-		"typeface-pt-sans": "0.0.54",
-		"typeface-share-tech-mono": "0.0.54",
+		"typeface-pt-sans": "0.0.72",
+		"typeface-share-tech-mono": "0.0.72",
 		"url-join": "^4.0.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.4.0",
+		"@storybook/addon-actions": "^5.0.3",
+		"@storybook/addon-links": "^5.0.3",
+		"@storybook/addons": "^5.0.3",
+		"@storybook/react": "^5.0.3",
+		"babel-loader": "^8.0.5",
 		"cli-glob": "^0.1.0",
-		"eslint": "^5.8.0",
+		"eslint": "^5.15.3",
 		"eslint-config-airbnb": "^17.1.0",
-		"eslint-config-prettier": "^3.1.0",
-		"eslint-plugin-import": "^2.8.0",
-		"eslint-plugin-jsx-a11y": "^6.1.2",
-		"eslint-plugin-react": "^7.6.1",
+		"eslint-config-prettier": "^4.1.0",
+		"eslint-plugin-import": "^2.16.0",
+		"eslint-plugin-jsx-a11y": "^6.2.1",
+		"eslint-plugin-react": "^7.12.4",
+		"esm": "^3.2.22",
 		"gh-pages": "^2.0.1",
-		"prettier": "^1.14.3",
-		"remark-cli": "^6.0.0",
-		"remark-preset-lint-recommended": "^3.0.1",
+		"prettier": "^1.16.4",
+		"remark-cli": "^6.0.1",
+		"remark-preset-lint-recommended": "^3.0.2",
 		"stylefmt": "^6.0.3",
-		"stylelint": "^9.7.1",
+		"stylelint": "^9.10.1",
 		"stylelint-config-standard": "^18.0.0",
-		"write-good": "^0.13.1"
+		"write-good": "^1.0.1"
 	},
 	"keywords": [
 		"gatsby"
 	],
 	"license": "MIT",
-	"main": "n/a",
 	"scripts": {
 		"develop": "gatsby develop",
 		"dev": "npm run develop",
@@ -86,7 +103,9 @@
 		"lint:js": "eslint --ext .js,.jsx .",
 		"lint:md": "remark content/",
 		"write-good": "write-good $(glob 'content/posts/**/*.md')",
-		"format:js": "prettier '**/*.{js,jsx}' --write"
+		"format:js": "prettier '**/*.{js,jsx}' --write",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"remarkConfig": {
 		"plugins": [
