--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"gatsby-source-filesystem": "2.0.27",
 		"gatsby-transformer-remark": "2.3.8",
 		"gatsby-transformer-sharp": "2.1.17",
+		"glob": "^7.1.3",
+		"iltorb": "^2.4.2",
 		"lodash": "^4.17.11",
 		"moment": "^2.24.0",
 		"node-sass": "^4.11.0",
