--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"gatsby-plugin-google-analytics": "2.0.17",
 		"gatsby-plugin-lodash": "3.0.5",
 		"gatsby-plugin-manifest": "2.0.24",
+		"gatsby-plugin-netlify": "^2.0.13",
 		"gatsby-plugin-nprogress": "2.0.10",
 		"gatsby-plugin-offline": "2.0.25",
 		"gatsby-plugin-page-creator": "^2.0.12",
