--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"author": "Savio Fernandes <artbycrunk@gmail.com>",
 	"main": "index.js",
 	"peerDependencies": {
-		"gatsby": "^2.3.3",
+		"gatsby": "2.3.25",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6"
 	},
@@ -16,7 +16,7 @@
 		"core-js": "^2.6.5",
 		"debug": "^4.1.1",
 		"disqus-react": "^1.0.5",
-		"gatsby": "^2.3.3",
+		"gatsby": "2.3.25",
 		"gatsby-image": "2.0.35",
 		"gatsby-mdx": "^0.4.4",
 		"gatsby-plugin-catch-links": "2.0.13",
