--- a/package.json
+++ b/package.json
@@ -5,91 +5,93 @@
 	"author": "Savio Fernandes <artbycrunk@gmail.com>",
 	"main": "index.js",
 	"peerDependencies": {
-		"gatsby": "2.9.11",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6"
+		"gatsby": "2.15.1",
+		"react": "^16.9.0",
+		"react-dom": "^16.9.0"
 	},
 	"dependencies": {
 		"@mapbox/rehype-prism": "^0.3.1",
-		"@mdx-js/mdx": "0.18.2",
+		"@mdx-js/mdx": "1.4.0",
 		"@mdx-js/tag": "0.16.8",
-		"core-js": "^2.6.5",
+		"@mdx-js/react": "1.4.0",
+		"gatsby-plugin-mdx":"^1.0.33",
+		"core-js": "^3.2.1",
 		"debug": "^4.1.1",
-		"disqus-react": "^1.0.5",
-		"gatsby": "2.9.11",
-		"gatsby-image": "2.0.35",
-		"gatsby-mdx": "^0.4.4",
-		"gatsby-plugin-catch-links": "2.0.13",
-		"gatsby-plugin-feed": "2.1.0",
-		"gatsby-plugin-google-analytics": "2.0.17",
-		"gatsby-plugin-google-tagmanager": "2.1.1",
-		"gatsby-plugin-lodash": "3.0.5",
-		"gatsby-plugin-manifest": "2.0.24",
-		"gatsby-plugin-netlify": "^2.0.13",
-		"gatsby-plugin-nprogress": "2.0.10",
-		"gatsby-plugin-offline": "2.0.25",
-		"gatsby-plugin-page-creator": "^2.0.12",
-		"gatsby-plugin-react-helmet": "3.0.10",
-		"gatsby-plugin-robots-txt": "^1.4.0",
-		"gatsby-plugin-sass": "^2.0.11",
-		"gatsby-plugin-sharp": "^2.0.30",
-		"gatsby-plugin-sitemap": "2.0.10",
-		"gatsby-plugin-twitter": "2.0.13",
-		"gatsby-remark-autolink-headers": "2.0.16",
-		"gatsby-remark-copy-linked-files": "2.0.11",
-		"gatsby-remark-images": "3.0.10",
-		"gatsby-remark-prismjs": "3.2.6",
-		"gatsby-remark-responsive-iframe": "2.1.1",
-		"gatsby-source-filesystem": "2.0.27",
-		"gatsby-transformer-remark": "2.3.8",
-		"gatsby-transformer-sharp": "2.1.17",
-		"glob": "^7.1.3",
-		"iltorb": "^2.4.2",
-		"lodash": "^4.17.11",
+		"disqus-react": "^1.0.6",
+		"gatsby": "2.15.1",
+		"gatsby-image": "2.2.15",
+		"gatsby-plugin-catch-links": "2.1.6",
+		"gatsby-plugin-feed": "2.3.9",
+		"gatsby-plugin-google-analytics": "2.1.12",
+		"gatsby-plugin-google-tagmanager": "2.1.7",
+		"gatsby-plugin-lodash": "3.1.5",
+		"gatsby-plugin-manifest": "2.2.12",
+		"gatsby-plugin-netlify": "^2.1.10",
+		"gatsby-plugin-nprogress": "2.1.4",
+		"gatsby-plugin-offline": "3.0.0",
+		"gatsby-plugin-page-creator": "^2.1.14",
+		"gatsby-plugin-react-helmet": "3.1.5",
+		"gatsby-plugin-robots-txt": "^1.5.0",
+		"gatsby-plugin-sass": "^2.1.12",
+		"gatsby-plugin-sharp": "^2.2.18",
+		"gatsby-plugin-sitemap": "2.2.9",
+		"gatsby-plugin-twitter": "2.1.4",
+		"gatsby-remark-autolink-headers": "2.1.8",
+		"gatsby-remark-copy-linked-files": "2.1.13",
+		"gatsby-remark-images": "3.1.19",
+		"gatsby-remark-prismjs": "3.3.11",
+		"gatsby-remark-responsive-iframe": "2.2.10",
+		"gatsby-source-filesystem": "2.1.18",
+		"gatsby-transformer-remark": "2.6.19",
+		"gatsby-transformer-sharp": "2.2.12",
+		"glob": "^7.1.4",
+		"iltorb": "^2.4.3",
+		"lodash": "^4.17.15",
 		"moment": "^2.24.0",
-		"node-sass": "^4.11.0",
-		"prism-react-renderer": "^0.1.6",
-		"prismjs": "^1.15.0",
+		"node-sass": "^4.12.0",
+		"prism-react-renderer": "^0.1.7",
+		"prismjs": "^1.17.1",
 		"prop-types": "15.7.2",
-		"react": "^16.8.6",
+		"react": "^16.9.0",
 		"react-collapse": "^4.0.3",
 		"react-disqus-comments": "^1.4.0",
-		"react-dom": "^16.8.6",
+		"react-dom": "^16.9.0",
 		"react-gravatar": "2.6.3",
-		"react-helmet": "^5.2.0",
-		"react-images": "^0.5.19",
+		"react-helmet": "^5.2.1",
+		"react-images": "0.5.19",
+		"react-image-lightbox": "5.1.0",
 		"react-motion": "^0.5.2",
-		"react-share": "^2.4.0",
+		"react-share": "^3.0.1",
 		"react-social-icons": "^4.1.0",
 		"react-twitter-widgets": "^1.7.1",
-		"styled-components": "^4.1.3",
+		"styled-components": "^4.3.2",
 		"typeface-pt-sans": "0.0.72",
 		"typeface-share-tech-mono": "0.0.72",
-		"url-join": "^4.0.0"
+		"url-join": "^4.0.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.4.0",
-		"@storybook/addon-actions": "^5.0.3",
-		"@storybook/addon-links": "^5.0.3",
-		"@storybook/addons": "^5.0.3",
-		"@storybook/react": "^5.0.3",
-		"babel-loader": "^8.0.5",
+		"@babel/core": "^7.5.5",
+		"@storybook/addon-actions": "^5.1.11",
+		"@storybook/addon-links": "^5.1.11",
+		"@storybook/addons": "^5.1.11",
+		"@storybook/react": "^5.1.11",
+		"babel-loader": "^8.0.6",
 		"cli-glob": "^0.1.0",
 		"eslint": "^5.15.3",
-		"eslint-config-airbnb": "^17.1.0",
-		"eslint-config-prettier": "^4.1.0",
-		"eslint-plugin-import": "^2.16.0",
-		"eslint-plugin-jsx-a11y": "^6.2.1",
-		"eslint-plugin-react": "^7.12.4",
-		"esm": "^3.2.22",
-		"gh-pages": "^2.0.1",
-		"prettier": "^1.16.4",
-		"remark-cli": "^6.0.1",
-		"remark-preset-lint-recommended": "^3.0.2",
+		"eslint-config-airbnb": "^18.0.1",
+		"eslint-config-prettier": "^6.1.0",
+		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.14.3",
+		"esm": "^3.2.25",
+		"gh-pages": "^2.1.1",
+		"prettier": "^1.18.2",
+		"remark-cli": "^7.0.0",
+		"remark-preset-lint-recommended": "^3.0.3",
 		"stylefmt": "^6.0.3",
-		"stylelint": "^9.10.1",
-		"stylelint-config-standard": "^18.0.0",
-		"write-good": "^1.0.1"
+		"stylelint": "^10.1.0",
+		"stylelint-config-standard": "^18.3.0",
+		"write-good": "^1.0.2"
 	},
 	"keywords": [
 		"gatsby"
