--- a/package.json
+++ b/package.json
@@ -5,55 +5,55 @@
 	"author": "Savio Fernandes <artbycrunk@gmail.com>",
 	"main": "index.js",
 	"peerDependencies": {
-		"gatsby": "2.15.1",
-		"react": "^16.9.0",
-		"react-dom": "^16.9.0"
+		"gatsby": "2.17.10",
+		"react": "^16.11.0",
+		"react-dom": "^16.11.0"
 	},
 	"dependencies": {
 		"@mdx-js/mdx": "1.4.0",
 		"@mdx-js/react": "1.4.0",
 		"gatsby-plugin-mdx":"^1.0.33",
-		"core-js": "^3.2.1",
+		"core-js": "^3.4.1",
 		"debug": "^4.1.1",
-		"disqus-react": "^1.0.6",
-		"gatsby": "2.15.1",
-		"gatsby-image": "2.2.15",
-		"gatsby-plugin-catch-links": "2.1.6",
-		"gatsby-plugin-feed": "2.3.9",
-		"gatsby-plugin-google-analytics": "2.1.12",
-		"gatsby-plugin-google-tagmanager": "2.1.7",
-		"gatsby-plugin-lodash": "3.1.5",
-		"gatsby-plugin-manifest": "2.2.12",
-		"gatsby-plugin-netlify": "^2.1.10",
-		"gatsby-plugin-nprogress": "2.1.4",
-		"gatsby-plugin-offline": "3.0.0",
-		"gatsby-plugin-page-creator": "^2.1.14",
-		"gatsby-plugin-react-helmet": "3.1.5",
+		"disqus-react": "^1.0.7",
+		"gatsby": "2.17.13",
+		"gatsby-image": "2.2.32",
+		"gatsby-plugin-catch-links": "2.1.16",
+		"gatsby-plugin-feed": "2.3.20",
+		"gatsby-plugin-google-analytics": "2.1.26",
+		"gatsby-plugin-google-tagmanager": "2.1.16",
+		"gatsby-plugin-lodash": "3.1.14",
+		"gatsby-plugin-manifest": "2.2.27",
+		"gatsby-plugin-netlify": "^2.1.24",
+		"gatsby-plugin-nprogress": "2.1.13",
+		"gatsby-plugin-offline": "3.0.20",
+		"gatsby-plugin-page-creator": "^2.1.29",
+		"gatsby-plugin-react-helmet": "3.1.14",
 		"gatsby-plugin-robots-txt": "^1.5.0",
-		"gatsby-plugin-sass": "^2.1.12",
-		"gatsby-plugin-sharp": "^2.2.18",
-		"gatsby-plugin-sitemap": "2.2.9",
-		"gatsby-plugin-twitter": "2.1.4",
-		"gatsby-remark-autolink-headers": "2.1.8",
-		"gatsby-remark-copy-linked-files": "2.1.13",
-		"gatsby-remark-images": "3.1.19",
-		"gatsby-remark-prismjs": "3.3.11",
-		"gatsby-remark-responsive-iframe": "2.2.10",
-		"gatsby-source-filesystem": "2.1.18",
-		"gatsby-transformer-remark": "2.6.19",
-		"gatsby-transformer-sharp": "2.2.12",
-		"glob": "^7.1.4",
-		"iltorb": "^2.4.3",
+		"gatsby-plugin-sass": "^2.1.22",
+		"gatsby-plugin-sharp": "^2.2.38",
+		"gatsby-plugin-sitemap": "2.2.20",
+		"gatsby-plugin-twitter": "2.1.13",
+		"gatsby-remark-autolink-headers": "2.1.17",
+		"gatsby-remark-copy-linked-files": "2.1.29",
+		"gatsby-remark-images": "3.1.30",
+		"gatsby-remark-prismjs": "3.3.22",
+		"gatsby-remark-responsive-iframe": "2.2.26",
+		"gatsby-source-filesystem": "2.1.36",
+		"gatsby-transformer-remark": "2.6.34",
+		"gatsby-transformer-sharp": "2.3.4",
+		"glob": "^7.1.6",
+		"iltorb": "^2.4.4",
 		"lodash": "^4.17.15",
 		"moment": "^2.24.0",
-		"node-sass": "^4.12.0",
+		"node-sass": "^4.13.0",
 		"prism-react-renderer": "^0.1.7",
 		"prismjs": "^1.17.1",
 		"prop-types": "15.7.2",
-		"react": "^16.9.0",
+		"react": "^16.11.0",
 		"react-collapse": "^4.0.3",
 		"react-disqus-comments": "^1.4.0",
-		"react-dom": "^16.9.0",
+		"react-dom": "^16.11.0",
 		"react-gravatar": "2.6.3",
 		"react-helmet": "^5.2.1",
 		"react-images": "0.5.19",
@@ -68,28 +68,32 @@
 		"url-join": "^4.0.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.5.5",
-		"@storybook/addon-actions": "^5.1.11",
-		"@storybook/addon-links": "^5.1.11",
-		"@storybook/addons": "^5.1.11",
-		"@storybook/react": "^5.1.11",
+		"@babel/core": "^7.7.2",
+		"@storybook/addon-actions": "^5.2.6",
+		"@storybook/addon-links": "^5.2.6",
+		"@storybook/addons": "^5.2.6",
+		"@storybook/react": "^5.2.6",
 		"babel-loader": "^8.0.6",
 		"cli-glob": "^0.1.0",
-		"eslint": "^5.15.3",
+		"eslint": "^6.6.0",
 		"eslint-config-airbnb": "^18.0.1",
-		"eslint-config-prettier": "^6.1.0",
+		"eslint-plugin-react-hooks":"2.2.0",
+		"eslint-plugin-flowtype": "4.4.1",
+		
+		"eslint-config-prettier": "^6.5.0",
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-react": "^7.14.3",
+		"eslint-plugin-react": "^7.16.0",
 		"esm": "^3.2.25",
 		"gh-pages": "^2.1.1",
-		"prettier": "^1.18.2",
-		"remark-cli": "^7.0.0",
+		"prettier": "^1.19.1",
+		"remark-cli": "^7.0.1",
 		"remark-preset-lint-recommended": "^3.0.3",
 		"stylefmt": "^6.0.3",
-		"stylelint": "^10.1.0",
-		"stylelint-config-standard": "^18.3.0",
-		"write-good": "^1.0.2"
+		"stylelint": "^11.1.1",
+		"stylelint-config-standard": "^19.0.0",
+		"write-good": "^1.0.2",
+		"webpack": "4.41.2"
 	},
 	"keywords": [
 		"gatsby"
