--- a/package.json
+++ b/package.json
@@ -16,19 +16,7 @@
 		"core-js": "^3.4.1",
 		"debug": "^4.1.1",
 		"disqus-react": "^1.0.7",
-		"gatsby": "2.17.13",
-		"gatsby-image": "2.2.32",
-		"gatsby-plugin-catch-links": "2.1.16",
-		"gatsby-plugin-feed": "2.3.20",
-		"gatsby-plugin-google-analytics": "2.1.26",
-		"gatsby-plugin-google-tagmanager": "2.1.16",
-		"gatsby-plugin-lodash": "3.1.14",
-		"gatsby-plugin-manifest": "2.2.27",
-		"gatsby-plugin-netlify": "^2.1.24",
-		"gatsby-plugin-nprogress": "2.1.13",
-		"gatsby-plugin-offline": "3.0.20",
-		"gatsby-plugin-page-creator": "^2.1.29",
-		"gatsby-plugin-react-helmet": "3.1.14",
+		"gatsby-plugin-react-helmet-async": "^1.0.14",
 		"gatsby-plugin-robots-txt": "^1.5.0",
 		"gatsby-plugin-sass": "^2.1.22",
 		"gatsby-plugin-sharp": "^2.2.38",
@@ -55,6 +43,7 @@
 		"react-disqus-comments": "^1.4.0",
 		"react-dom": "^16.11.0",
 		"react-gravatar": "2.6.3",
+		"react-helmet-async":"^1.0.4",
 		"react-images": "1.0.0",
 		"react-image-lightbox": "5.1.1",
 		"react-motion": "^0.5.2",
